--- a/.env
+++ b/.env
@@ -4,4 +4,9 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="mongodb+srv://fahim:capstone_fahim@capstonecluster.kogldmi.mongodb.net/capstone"
+NEXTAUTH_JWT_SECRET="NEXT-JWT-SECRET"
+NEXTAUTH_SECRET="NEXT-SECRET"
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
