--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "openai": "^4.47.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
